--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lucide-react": "^0.509.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-intersection-observer": "^9.16.0",
     "react-parallax": "^3.5.2",
